{
    "name": "InputControls",
    "maps": [
        {
            "name": "player",
            "id": "c1464f5b-e277-47e6-a04b-8ce1421eac2f",
            "actions": [
                {
                    "name": "move",
                    "type": "Value",
                    "id": "7cbbdfd4-991f-4b71-9379-10d768899033",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "jump",
                    "type": "Button",
                    "id": "9262d7ec-83c9-4c38-937e-d7cd9e385c5e",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "1D Axis",
                    "id": "a15fa2eb-8daf-4771-b918-a3fd58769dd2",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "move",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "976594d7-ed4d-4ce9-9781-451be6917ff3",
                    "path": "<Keyboard>/leftArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "64a98f57-4f65-4309-bafd-6ef5157e84e6",
                    "path": "<Keyboard>/rightArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "a5b38f76-0c69-4738-8089-92526a20f3b6",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}